--- a/index.html
+++ b/index.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Symphony</title>
-</head>
-<body>
-      <header>
-    <!-- Header content, logo, navigation, etc. -->
-  </header>
+  </head>
+  <body>
+    <div class="container">
+      <div class="grid-item" id="sidebar">i am sidebar</div>
+      <div class="grid-item" id="middle">i am middle box</div>
+      <div class="grid-item" id="right">i am right</div>
+    </div>
 
-  <main>
-    <section id="home">
-      <!-- Home section content -->
-    </section>
-
-    <section id="artists">
-      <!-- Artists section content -->
-    </section>
-
-    <section id="playlists">
-      <!-- Playlists section content -->
-    </section>
-
-    <section id="albums">
-      <!-- Albums section content -->
-    </section>
-
-    <section id="settings">
-      <!-- Settings section content -->
-    </section>
-  </main>
-
-  <footer>
-    <!-- Footer content -->
-  </footer>
-
-  <script src="./scripts/root.js"></script>
-</body>
+    <script src="./scripts/root.js"></script>
+  </body>
 </html>
