--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
 
     <link rel="stylesheet" href="./styles/index.css" />
 
@@ -22,12 +26,22 @@
           <i class="bi bi-mic"></i>
           <i class="bi bi-graph-up-arrow"></i>
           <i class="bi bi-heart"></i>
-          <i class="bi bi-cloud-download"></i>
+          <i class="bi bi-download"></i>
         </div>
       </div>
       <!-- Middle-section of App -->
+
       <div class="grid-item" id="middle">
-        <div class="middle-child"></div>
+        <div class="middle-child " id="top-middle">
+          <input
+            type="text"
+            placeholder="Search for song, artist, lyrics"
+            aria-label="Search"
+            aria-describedby="search-icon"
+          />
+        </div>
+
+        <!-- Top second structure -->
         <div class="middle-child"><p>Recently Listened Albums</p></div>
         <div class="middle-child"><p>Trending Rigt Now</p></div>
         <div class="middle-child"><p>Recent Favourites</p></div>
