--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="notification-icon"><i class="bi bi-bell"></i></span>
             <span class="photo-icon"><i class="bi bi-person-circle"></i></span>
             <select class="custom-select" id="dropdownMenuButton">
-              <option selected>Name</option>
+              <option selected>Alex</option>
               <option value="2">Setting</option>
               <option value="3">Logout</option>
             </select>
